# postforge

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  build_cython.sh  install.bat  install.sh  postforge.bat  postforge.sh  pyproject.toml  setup_cython.py  uninstall.bat  uninstall.sh  visual_test.bat  visual_test.py  visual_test.sh  visual_tests_pdf.conf
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
docs/: README.md  background.md  samples.md
docs/design/: detailed-gap-analysis.md  level2-compliance-assessment.md  prd-documentation-overhaul.md
docs/developer/: adding-output-devices.md  architecture-overview.md  code-quality-audit-2026-02-20.md  contributing.md  operator-implementation.md  profiling.md  testing-guide.md  visual-regression-testing.md
docs/user/: user-guide.md
postforge/: __main__.py  cli.py  cli_args.py  cli_runner.py
postforge/core/: __init__.py  binary_token.py  cff_parser.py  charstring_interpreter.py  color_space.py  context_init.py  dct_params.py  dct_transforms.py  display_list_builder.py  error.py  glyph_cache.py  icc_default.py  icc_profile.py  mesh_shading.py  ps_function.py  system_font_cache.py  system_font_loader.py  tokenizer.py  type2_charstring.py  unicode_mapping.py
postforge/devices/: __init__.py
postforge/operators/: __init__.py  _control_cy.pyx  array.py  cff_ops.py  clipping.py  color_ops.py  control.py  control_flow.py  device_color_state.py  device_output.py  dict.py  file.py  filter.py  filter_ascii.py  filter_ccitt.py  filter_compression.py  filter_dct.py  font_ops.py  font_rendering.py  graphics_state.py  halftone_transfer.py  image.py  image_data.py  image_type3.py  insideness.py  insideness_algorithm.py  interpreter_params.py  job_control.py  math.py  matrix.py  misc.py  operand_stack.py  packed_array.py  painting.py  path.py  path_query.py  pattern_form.py  relational.py  resource.py  show_variants.py  (+7 more)
postforge/utils/: __init__.py  memory.py  profiler.py
resources/ColorRendering/: TestColorRendering.ps
samples/: cie_colorspace_test.ps  gradient_test.ps
unit_tests/: arithmetic_and_math_tests.ps  color_operators_tests.ps  dictionary_tests.ps  filter_extended_tests.ps  gstate_tests.ps  interpreter_param_tests.ps  resource_tests.ps
(+52 files in other folders)
